Fix UI not looking right on smaller screen

--- a/client/components/EvaluationView/CommitteeOverview/OverviewPage.scss
+++ b/client/components/EvaluationView/CommitteeOverview/OverviewPage.scss
@@ -37,19 +37,19 @@ $QUESTION_COUNT: 6;
   grid-column-gap: 5px;
   width: 90vw;
   padding-left: 2em;
-  padding-right: 30em;
+  padding-right: 5em;
 }
 
 .overview-color-grid-committee {
   @include committee-overview-basics;
   &-3 {
     @include committee-overview-basics;
-    grid-template-rows: 70px 50px repeat(7, 20px) 100px repeat(7, 20px) 100px repeat(2, 20px);
+    grid-template-rows: 70px 50px repeat(7, 20px) 100px minmax(100px,2fr) repeat(6, 20px)  100px minmax(100px,2fr) repeat(2, 80px);
     grid-template-columns: minmax(0,4fr) repeat(1, minmax(0,6fr)) minmax(0,3em)  repeat(1, minmax(0,6fr)) ;
  }
  &-5 {
   @include committee-overview-basics;
-  grid-template-rows: 70px 50px repeat(7, 20px) 100px repeat(7, 20px) 100px repeat(2, 20px);
+  grid-template-rows: 70px 50px repeat(7, 20px) 100px minmax(100px,2fr) repeat(6, 20px) 100px minmax(100px,2fr) repeat(2, 80px);
   grid-template-columns: minmax(0,2fr) repeat(2, minmax(0,2fr)) minmax(0,3em)  repeat(2, minmax(0,2fr)) ;
  }
 }
@@ -231,6 +231,14 @@ $QUESTION_COUNT: 6;
 .committee-level-filter {
   font-size: 1.5rem !important;
   height: 1.5em;
+  &-master {
+    font-size: 1.5rem !important;
+    height: 1.5em;
+  }
+  &-doctoral {
+    font-size: 1.5rem !important;
+    height: 1.5em;
+  }
 }
 
 .committee-table-header-3 {
